<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/controller_category">
        <com.odin2.odinsettings.widget.ControllerListPreference
            android:defaultValue="standard"
            android:entries="@array/controller_profile_entries"
            android:entryValues="@array/controller_profile_values"
            android:key="system_controller_profile"
            android:summary="@string/controller_profile_reading_summary"
            android:title="@string/system_mapping_title" />
        <Preference
            android:key="controller_input_test"
            android:summary="@string/controller_test_summary"
            android:title="@string/controller_test_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/external_display_category">
        <Preference
            android:enabled="false"
            android:key="external_display_policy"
            android:title="@string/external_display_policy_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/battery_category">
        <com.odin2.odinsettings.widget.ControllerListPreference
            android:entries="@array/charge_mode_entries"
            android:entryValues="@array/charge_mode_values"
            android:key="charge_mode"
            android:persistent="false"
            android:summary="@string/charge_status_initial_summary"
            android:title="@string/charge_mode_title" />
        <com.odin2.odinsettings.widget.ControllerListPreference
            android:entries="@array/charge_limit_entries"
            android:entryValues="@array/charge_limit_values"
            android:key="charge_limit"
            android:persistent="false"
            android:summary="@string/charge_limit_summary"
            android:title="@string/charge_limit_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/hardware_controls_category">
        <com.odin2.odinsettings.widget.ControllerListPreference
            android:entries="@array/fan_mode_entries"
            android:entryValues="@array/fan_mode_values"
            android:key="fan_mode"
            android:persistent="false"
            android:summary="@string/fan_status_initial_summary"
            android:title="@string/fan_mode_title" />
        <com.odin2.odinsettings.widget.ControllerListPreference
            android:entries="@array/performance_mode_entries"
            android:entryValues="@array/performance_mode_values"
            android:key="performance_mode"
            android:persistent="false"
            android:summary="@string/performance_status_initial_summary"
            android:title="@string/performance_mode_title" />
        <Preference
            android:enabled="false"
            android:summary="@string/calibration_summary"
            android:title="@string/calibration_title" />
    </PreferenceCategory>
</PreferenceScreen>
