<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layoutDirection="locale">

    <LinearLayout
        android:id="@+id/controller_test_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingTop="?android:attr/listPreferredItemPaddingStart"
        android:paddingEnd="?android:attr/listPreferredItemPaddingStart"
        android:paddingBottom="?android:attr/listPreferredItemPaddingStart">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/controller_test_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?android:attr/listPreferredItemPaddingStart"
            android:text="@string/controller_test_prompt"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/controller_test_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?android:attr/listPreferredItemPaddingStart"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/done" />

        <LinearLayout
            android:id="@+id/controller_test_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:accessibilityLiveRegion="polite"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?android:attr/listPreferredItemPaddingStart"
                android:labelFor="@id/controller_test_profile_value"
                android:text="@string/preview_profile_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/controller_test_profile_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_button_detected"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?android:attr/listPreferredItemPaddingStart"
                android:labelFor="@id/controller_test_physical_value"
                android:text="@string/physical_button_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/controller_test_physical_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_button_detected"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="?android:attr/listPreferredItemPaddingStart"
                android:labelFor="@id/controller_test_mapped_value"
                android:text="@string/preview_output_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/controller_test_mapped_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_button_detected"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
